# global-edge-switching

./: .gitignore  .gitmodules  CMakeLists.txt  Plots.ipynb  autocorrelation_pld.cpp  autocorrelation_realworld.cpp  autocorrelation_realworld_skipnonorig.cpp  benchmark_algorithms.cpp  benchmark_parallel_naive.cpp  benchmark_shuffle.cpp  convert_large.cpp  count_duplicates.cpp  generate_initial-graphs  generate_initial-graphs_scaling_avg_d  generate_initial-graphs_scaling_gamma  log-max-degrees  log-max-degrees_on_dir  main.cpp  nowait_round_stats.cpp  parallel_naive.cpp  run_benchmarks  run_benchmarks_artificial  run_benchmarks_parallel  run_benchmarks_real-world  run_benchmarks_real-world_scatter  run_benchmarks_real-world_scatter_bn_massive  run_benchmarks_real-world_scatter_on_dir  run_benchmarks_scaling_avg_d  run_benchmarks_scaling_gamma  run_benchmarks_scaling_p_on_dir  run_benchmarks_sequential
autocorrelation/: generate_jobs.py  run_autocorrelation_pld.sh  sorted.csv
benchmark-results/parallel/: bio-human-gene1_global-naive-v2_10_32  bio-human-gene1_global-no-wait_10_32  bio-human-gene1_naive-v2_10_32  bn-human-Jung2015_M87100374_global-naive-v2_10_32  bn-human-Jung2015_M87100374_global-no-wait_10_32  bn-human-Jung2015_M87100374_naive-v2_10_32  ca-hollywood-2009_global-naive-v2_10_32  ca-hollywood-2009_global-no-wait_10_32  ca-hollywood-2009_naive-v2_10_32  cit-DBLP_global-naive-v2_10_32  cit-DBLP_global-no-wait_10_32  cit-DBLP_naive-v2_10_32  cit-HepTh_global-naive-v2_10_32  cit-HepTh_global-no-wait_10_32  cit-HepTh_naive-v2_10_32  eco-everglades_global-naive-v2_10_32  eco-everglades_global-no-wait_10_32  eco-everglades_naive-v2_10_32  email-enron-large_global-naive-v2_10_32  email-enron-large_global-no-wait_10_32  email-enron-large_naive-v2_10_32  inf-road-usa_global-naive-v2_10_32  inf-road-usa_global-no-wait_10_32  inf-road-usa_naive-v2_10_32  power-US-Grid_global-naive-v2_10_32  power-US-Grid_global-no-wait_10_32  power-US-Grid_naive-v2_10_32  rec-amazon_global-naive-v2_10_32  rec-amazon_global-no-wait_10_32  rec-amazon_naive-v2_10_32  soc-twitter-follows_global-naive-v2_10_32  soc-twitter-follows_global-no-wait_10_32  soc-twitter-follows_naive-v2_10_32  soc-twitter-mpi-sws_global-naive-v2_10_32  soc-twitter-mpi-sws_global-no-wait_10_32  soc-twitter-mpi-sws_naive-v2_10_32  socfb-konect_global-naive-v2_10_32  socfb-konect_global-no-wait_10_32  socfb-konect_naive-v2_10_32  tech-p2p_global-naive-v2_10_32  (+5 more)
benchmark-results/scaling-avg-d/: random_10_1024_global-no-wait-no-prefetch_10_32  random_10_1024_global-no-wait-no-prefetch_10_64  random_10_256_global-no-wait-no-prefetch_10_32  random_10_256_global-no-wait-no-prefetch_10_64  random_12_1024_global-no-wait-no-prefetch_10_32  random_12_1024_global-no-wait-no-prefetch_10_64  random_12_256_global-no-wait-no-prefetch_10_32  random_12_256_global-no-wait-no-prefetch_10_64  random_12_4096_global-no-wait-no-prefetch_10_32  random_12_4096_global-no-wait-no-prefetch_10_64  random_12_64_global-no-wait-no-prefetch_10_32  random_12_64_global-no-wait-no-prefetch_10_64  random_14_1024_global-no-wait-no-prefetch_10_32  random_14_1024_global-no-wait-no-prefetch_10_64  random_14_16_global-no-wait-no-prefetch_10_32  random_14_16_global-no-wait-no-prefetch_10_64  random_14_256_global-no-wait-no-prefetch_10_32  random_14_256_global-no-wait-no-prefetch_10_64  random_14_4096_global-no-wait-no-prefetch_10_32  random_14_4096_global-no-wait-no-prefetch_10_64  random_14_64_global-no-wait-no-prefetch_10_32  random_14_64_global-no-wait-no-prefetch_10_64  random_16_1024_global-no-wait-no-prefetch_10_32  random_16_1024_global-no-wait-no-prefetch_10_64  random_16_16_global-no-wait-no-prefetch_10_32  random_16_16_global-no-wait-no-prefetch_10_64  random_16_256_global-no-wait-no-prefetch_10_32  random_16_256_global-no-wait-no-prefetch_10_64  random_16_4096_global-no-wait-no-prefetch_10_32  random_16_4096_global-no-wait-no-prefetch_10_64  random_16_4_global-no-wait-no-prefetch_10_32  random_16_4_global-no-wait-no-prefetch_10_64  random_16_64_global-no-wait-no-prefetch_10_32  random_16_64_global-no-wait-no-prefetch_10_64  random_18_1024_global-no-wait-no-prefetch_10_32  random_18_1024_global-no-wait-no-prefetch_10_64  random_18_16_global-no-wait-no-prefetch_10_32  random_18_16_global-no-wait-no-prefetch_10_64  random_18_256_global-no-wait-no-prefetch_10_32  random_18_256_global-no-wait-no-prefetch_10_64  (+38 more)
benchmark-results/scaling-gamma/: powerlaw_16_2.01_global-no-wait-no-prefetch_10_64  powerlaw_16_2.1_global-no-wait-no-prefetch_10_64  powerlaw_16_2.2_global-no-wait-no-prefetch_10_64  powerlaw_16_2.3_global-no-wait-no-prefetch_10_64  powerlaw_16_2.4_global-no-wait-no-prefetch_10_64  powerlaw_16_2.5_global-no-wait-no-prefetch_10_64  (+588 more)
degseqs/: ca-CondMat  ca-GrQc  ca-IMDB  ca-MathSciNet  ca-aminer  ca-citeseer  ca-dblp-2010  ca-dblp-2012  fb-pages-company  fb-pages-tvshow  rt-twitter-copen  soc-douban  soc-gemsec-HR  soc-gemsec-HU  soc-gemsec-RO  soc-student-coop  soc-twitter-follows  soc-twitter-follows-mun  web-BerkStan  web-arabic-2005  web-edu  web-google  web-indochina-2004  web-it-2004  web-sk-2005  web-uk-2005  web-wikipedia2009
include/es/: AdjacencyVector.hpp  (+11 more)
source/tests/: CMakeLists.txt  TestAlgorithmParallelGlobal.cpp  TestAlgorithms.cpp  TestAutocorrelationAnalysis.cpp  TestGraph.cpp  TestLinearCongruentialMap.cpp  TestParallelEdgeSet.cpp
(+11455 files in other folders)
